--- a/src/w3/index.html
+++ b/src/w3/index.html
@@ -10,7 +10,10 @@
     <p><stong>CLAIRE SAFFITZ</stong></p>
     <p>2023.01.04</p>
     <p><em>레서피</em></p>
-    <img src="/assets/pasta-carbonara.jpg" alt="" />
+    <img
+      src="/assets/pasta-carbonara.jpg"
+      alt="흰 접시 위에 카르보나라 파스타"
+    />
     <p>사진: Chelsie Craig, 스타일링: Molly Baz</p>
     <p><strong>총 소요 시간 24분</strong></p>
     <p>
