--- a/src/w2/index.html
+++ b/src/w2/index.html
@@ -11,7 +11,7 @@
     <p>2023.01.04</p>
     <p><em>레서피</em></p>
     <img
-      src="assets/pasta-carbonara.jpg"
+      src="/assets/pasta-carbonara.jpg"
       alt="흰 접시 위에 카르보나라 파스타"
     />
     <p>사진: Chelsie Craig, 스타일링: Molly Baz</p>
