--- a/src/w4/index.html
+++ b/src/w4/index.html
@@ -9,7 +9,7 @@
     <h1>카르보나라</h1>
     <p><stong>CLAIRE SAFFITZ</stong></p>
     <p>2023.01.04</p>
-    <p><em>레서피</em></p>
+    <p><em>레서피.</em></p>
     <img
       src="../../assets/pasta-carbonara.jpg"
       alt="흰 접시 위에 카르보나라 파스타"
