--- a/src/w4/index.html
+++ b/src/w4/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pasta Carbonara</title>
   </head>
-  <body>
-    <h1>카르보나라</h1>
-    <p><stong>CLAIRE SAFFITZ</stong></p>
+  <body style="max-width: 800px; background-color: aqua; margin-inline: auto">
+    <h1>파스타 카르보나라</h1>
+    <p>
+      <strong style="font-weight: 700; color: rgb(200, 90, 0)"
+        >CLAIRE SAFFITZ</strong
+      >
+    </p>
     <p>2023.01.04</p>
-    <p><em>레서피.</em></p>
+    <p><em style="font-style: normal">레서피</em></p>
     <img
       src="../../assets/pasta-carbonara.jpg"
       alt="흰 접시 위에 카르보나라 파스타"
+      style="max-width: 600px; margin-inline: auto; background-color: blue"
     />
     <p>사진: Chelsie Craig, 스타일링: Molly Baz</p>
     <p><strong>총 소요 시간 24분</strong></p>
@@ -22,12 +27,14 @@
       있을 만큼 정말 쉽습니다. 카르보나라는 로마의 대표적인 요리 중 하나이며,
       카초 에 페페나 그와 비슷한 다른 파스타들과 같이 레시피는 단순하지만, 대신
       적절한 기술과 고품질의 재료를 요구합니다. 염장 고기의 짠맛이 요리에 깊이를
-      더하기에 전통적으로는 관찰레를 사용하지만, 팬체타나 베이컨을 사용할 수도
-      있습니다. 계란 노른자는 카르보나라 소스에 윤기나는 텍스쳐와 황금빛을
-      더합니다. 가능하면 신선한 농장에서 산 신선한 계란을 선택하세요. 치즈와
-      파스타에 관해서는 조금 더 많은 비용을 투자하는 것이 좋습니다. 로마노
-      치즈나 진짜 파르미지아노 레지아노, 그리고 좋은 스파게티나 부카티니 혹은
-      리가토니를 사세요.
+      더하기에 전통적으로는 관찰레를 사용하지만,
+      <span style="font-weight: 900; color: brown; background-color: tomato"
+        >팬체타</span
+      >나 베이컨을 사용할 수도 있습니다. 계란 노른자는 카르보나라 소스에
+      윤기나는 텍스쳐와 황금빛을 더합니다. 가능하면 신선한 농장에서 산 신선한
+      계란을 선택하세요. 치즈와 파스타에 관해서는 조금 더 많은 비용을 투자하는
+      것이 좋습니다. 로마노 치즈나 진짜 파르미지아노 레지아노, 그리고 좋은
+      스파게티나 부카티니 혹은 리가토니를 사세요.
     </p>
     <p>
       기술에 대해 한 마디: 어떤 카르보나라 레시피던지 크리미한 소스 특유의
