--- a/src/w4/assignment/w4.html
+++ b/src/w4/assignment/w4.html
@@ -103,7 +103,7 @@
       <div class="box">
         본 앱티트에 표시된 모든 제품은 편집자가 협찬을 받지 않고 독립적으로
         선택한 것입니다. 그러나 아래의 소매 링크를 통해 구매해주신다면 저희가
-        수수료를 받기에 도움이 됩니다.
+        수수료를 받기에 도움 됩니다.
       </div>
       <h2 style="padding-top: 48px">재료</h2>
       <span style="padding-top: 12px">4인분기준</span>
