--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <li><a href="./src/w2/index.html">2주차</a></li>
       <li><a href="./src/w3/index.html">3주차</a></li>
       <li><a href="./src/w4/index.html">4주차</a></li>
-      <li><a href="./src/w4/4-2.html">4주차 두번째</a></li>
-      <li><a href="./src/w4/assignment/w4.html">4주차 과제</a></li>
+      <li><a href="./src/w4/4-2.html">4주차_두번째</a></li>
+      <li><a href="./src/w4/assignment/w4.html">4주차_과제</a></li>
     </ol>
   </body>
 </html>
