--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
       <li><a href="./src/w2/index.html">2주차</a></li>
       <li><a href="./src/w3/index.html">3주차</a></li>
       <li><a href="./src/w4/index.html">4주차</a></li>
-      <li><a href="./src/w4/4-2.html">4주차_두번째</a></li>
+      <li><a href="./src/w4/4-2.html">4주차_2</a></li>
       <li>
         <a href="../WMD241_202320251/src/w4/assignment/w4.html">4주차_과제</a>
+      </li>
+      <li>
+        <a href="./src/w5/index.html">5주차</a>
+      </li>
+      <li>
+        <a href="./src/w6/index.html">6주차</a>
+      </li>
+      <li>
+        <a href="./src/w7/index.html">7주차</a>
+      </li>
+      <li>
+        <a href="./src/w7/assignment/index.html">7주차</a>
       </li>
     </ol>
   </body>
