--- a/src/w4/assignment/w4.html
+++ b/src/w4/assignment/w4.html
@@ -11,71 +11,78 @@
     />
     <style>
       * {
-        padding: 0px;
-        margin: 0px;
+        padding: 0rem;
+        margin: 0rem;
         box-sizing: border-box;
         font-family: "Spoqa Han Sans Neo", "sans-serif";
+        /* background-color: #928f89; */
       }
       h2 {
-        font-size: 35px;
+        font-size: 2.1875rem;
+        font-weight: 700;
       }
       h3 {
-        font-size: 23px;
+        font-size: 1.4375rem;
+        font-weight: 700;
       }
       p {
-        font-size: 18px;
+        font-size: 1.125rem;
       }
-      .padding {
+      .container {
         background-color: #f1eee8;
-        max-width: 1024px;
+        max-width: 64rem;
+        /* 16px = 1rem */
         margin-inline: auto;
-        padding: 32px;
+        /* margin illine: 전체 박스의 가운데 정렬 */
+        padding: 2rem;
+        /* 전체 박스와 글 사이 안쪽 여백의 정도 */
       }
-      .box {
-        font-size: 14px;
+      .callout {
+        font-size: 0.875rem;
         background-color: #dcccad;
-        padding: 16px;
+        padding: 1rem;
         width: auto;
         height: auto;
-        margin-inline: 0px;
-        border-radius: 8px;
+        margin-inline: 0rem;
+        border-radius: 0.5rem;
       }
       table {
         color: #24211d;
-        font-size: 18px;
+        font-size: 1.125rem;
         font-weight: 400;
-        padding-bottom: 48px;
-        border-spacing: 0px;
+        padding-bottom: 3rem;
+        border-spacing: 0rem;
       }
       td {
-        padding-inline: 12px;
-        padding-block: 4px;
+        padding-inline: 0.75rem;
+        padding-block: 0.25rem;
       }
       span {
-        font-size: 14px;
+        font-size: 0.875rem;
         color: #585550;
       }
     </style>
   </head>
   <body style="background-color: #928f89">
-    <div class="padding">
-      <h1 style="font-size: 69px; font-weight: 700px">파스타 카르보나라</h1>
-      <p style="padding-top: 8px">
+    <div class="container">
+      <h1 style="font-size: 4.3125rem; font-weight: 56.25rem">
+        파스타 카르보나라
+      </h1>
+      <p style="padding-top: 0.5rem">
         <stong style="font-weight: 700">CLAIRE SAFFITZ</stong>
       </p>
-      <p style="padding-top: 8px; font-weight: 500">레서피</p>
-      <span style="padding-top: 8px">2023.01.04</span>
-
+      <p style="padding-top: 0.5rem; font-weight: 500">레서피</p>
+      <span style="padding-top: 0.5rem">2023.01.04</span>
       <img
         src="../../../assets/pasta-carbonara.jpg"
         alt="흰 접시 위에 카르보나라 파스타"
-        style="max-width: 100%; padding-top: 24px"
+        style="max-width: 100%; padding-top: 1.5rem"
       />
-      <p style="padding-top: 8px">
+      <p style="padding-top: 0.5rem">
         <span>사진: Chelsie Craig, 스타일링: Molly Baz</span>
       </p>
-      <p style="padding-top: 24px; font-weight: 500">총 소요 시간 24분</p>
-      <p style="padding-top: 16px">
+      <p style="padding-top: 1.5rem; font-weight: 500">총 소요 시간 24분</p>
+      <p style="padding-top: 1rem">
         육즙이 풍부한 바삭한 돼지고기, 후추 맛이 가득하고 계란으로 풍성한 벨벳
         같은 치즈 소스를 가진 카르보나라는 밤새 놀고 들어온 새벽 2시도 만들 수
         있을 만큼 정말 쉽습니다. 카르보나라는 로마의 대표적인 요리 중 하나이며,
@@ -88,7 +95,7 @@
         로마노 치즈나 진짜 파르미지아노 레지아노, 그리고 좋은 스파게티나
         부카티니 혹은 리가토니를 사세요.
       </p>
-      <p style="padding-top: 8px">
+      <p style="padding-top: 0.5rem">
         기술에 대해 한 마디: 어떤 카르보나라 레시피던지 크리미한 소스 특유의
         윤기나는 광택을 얻기 위해서는 정확한 시간과 온도에 재료를 첨가하는 것이
         중요합니다. 면수를 ¼컵씩 계란 믹스에 섞고, 파스타에 추가하기 전에 불을
@@ -96,31 +103,46 @@
         잘 섞을 수 있습니다. 그 이후에는 모든 것을 빠르게 섞고 필요에 따라
         소스를 묽게 만들기 위해 더 많은 면수을 추가하세요.
       </p>
-      <p style="padding-top: 8px; padding-bottom: 24px">
+      <p style="padding-top: 0.5rem; padding-bottom: 1.5rem">
         저녁 식사 때는 이 파스타 요리를 샐러드와 함께 제공하는 것이 좋지만, 밤새
         놀고 난 뒤라면 그저 포크를 집어 파스타만 먹어도 됩니다.
       </p>
-      <div class="box">
+      <div class="callout">
         본 앱티트에 표시된 모든 제품은 편집자가 협찬을 받지 않고 독립적으로
         선택한 것입니다. 그러나 아래의 소매 링크를 통해 구매해주신다면 저희가
         수수료를 받기에 도움 됩니다.
       </div>
       <h2 style="padding-top: 48px">재료</h2>
-      <span style="padding-top: 12px">4인분기준</span>
-      <table style="padding-top: 12px">
+      <span style="padding-top: 0.75rem">4인분기준</span>
+      <table style="padding-top: 0.75rem">
         <tr>
-          <td style="padding-bottom: 6px; border-bottom: 2px solid#B1ADA8">
+          <td
+            style="
+              padding-bottom: 0.375rem;
+              border-bottom: 0.125rem solid#B1ADA8;
+            "
+          >
             수량
           </td>
-          <td style="padding-bottom: 6px; border-bottom: 2px solid#B1ADA8">
+          <td
+            style="
+              padding-bottom: 0.375rem;
+              border-bottom: 0.125rem solid#B1ADA8;
+            "
+          >
             단위
           </td>
-          <td style="padding-bottom: 6px; border-bottom: 2px solid#B1ADA8">
+          <td
+            style="
+              padding-bottom: 0.375rem;
+              border-bottom: 0.125rem solid#B1ADA8;
+            "
+          >
             품목
           </td>
         </tr>
         <tr>
-          <td style="text-align: right; padding-top: 8px">3</td>
+          <td style="text-align: right; padding-top: 0.5rem">3</td>
           <td>Tbsp.</td>
           <td>코셔 소금</td>
         </tr>
@@ -163,66 +185,66 @@
         </tr>
       </table>
       <h2>준비</h2>
-      <h3 style="padding-top: 12px">단계 1</h3>
-      <p style="padding-top: 8px">
+      <h3 style="padding-top: 0.75rem">단계 1</h3>
+      <p style="padding-top: 0.5rem">
         큰 냄비에 5.5qt.의 물 을 센 불로 가열하세요. 김이 올라오기 시작하면 소금
         3큰술 을 넣고 뚜껑을 덮어주세요 (이렇게 하면 물이 빨리 끓습니다).
       </p>
-      <h3 style="padding-top: 20px">단계 2</h3>
-      <p style="padding-top: 8px">
+      <h3 style="padding-top: 1.25rem">단계 2</h3>
+      <p style="padding-top: 0.5rem">
         물이 끓기 전에 다른 준비를 해주세요. 관찰레 4oz. 를 약 1x¼" 정도 크기로
         잘라주세요. 치즈 2oz. 를 곱게 갈아서 ¼ 분량은 나중을 위해 따로
         떼어두세요.
       </p>
-      <h3 style="padding-top: 20px">단계 3</h3>
-      <p style="padding-top: 8px">
+      <h3 style="padding-top: 1.25rem">단계 3</h3>
+      <p style="padding-top: 0.5rem">
         중간 크기의 그릇에 계란 6개 중 4개는 노른자만, 나머지 2개는 흰자도 같이
         휘핑해줍니다. 노른자들과 흰자가 하나가 될 때까지 휘핑한 후 (나중을 위해
         떼어둔 분량을 제외한) 갈아놓은 치즈를 넣어주세요. 후추를 적당히 갈아
         넣고 한 켠에 보관해주세요.
       </p>
-      <h3 style="padding-top: 20px">단계 4</h3>
-      <p style="padding-top: 8px">
+      <h3 style="padding-top: 1.25rem">단계 4</h3>
+      <p style="padding-top: 0.5rem">
         냄비 옆에서 주물팬 등 두꺼운 팬에 기름 2큰술 을 중간 불로 가열해주세요.
         관찰레를 넣고 가장자리가 바삭해질 때까지 가끔 뒤적이며 약 7-10분간
         조리해주세요.
       </p>
-      <h3 style="padding-top: 20px">단계 5</h3>
-      <p style="padding-top: 8px">
+      <h3 style="padding-top: 1.25rem">단계 5</h3>
+      <p style="padding-top: 0.5rem">
         관찰레를 조리하던 팬의 불을 끄세요. 관찰레를 건져서 작은 그릇에
         옮겨주세요. 관찰레에서 나온 기름은 내열 계량컵에 붓고, 팬에 다시 약
         3큰술을 넣어주세요. 남은 기름은 버려주세요.
       </p>
-      <h3 style="padding-top: 20px">단계 6</h3>
-      <p style="padding-top: 8px">
+      <h3 style="padding-top: 1.25rem">단계 6</h3>
+      <p style="padding-top: 0.5rem">
         파스타 1lb. 를 끓는 물에 넣고 가끔 저어주며, 포장에 적힌 시간보다 2분 더
         짧게 조리해주세요. 파스타가 거의 익을 때면, 내열 계량컵으로 면수 1¾컵을
         떠서 가져오세요.
       </p>
-      <h3 style="padding-top: 20px">단계 7</h3>
-      <p style="padding-top: 8px">
+      <h3 style="padding-top: 1.25rem">단계 7</h3>
+      <p style="padding-top: 0.5rem">
         팬에 떠놓은 면수 중 1컵을 붓고 넣고 중간 불로 끓이세요. 콜랜더로
         파스타를 떠서 팬에 옮겨주세요.
       </p>
-      <h3 style="padding-top: 20px">단계 8</h3>
-      <p style="padding-top: 8px">
+      <h3 style="padding-top: 1.25rem">단계 8</h3>
+      <p style="padding-top: 0.5rem">
         파스타를 계속 휘저어가며, 물이 대략 절반 정도 줄어들고, 면이 알단테가
         될때까지 약 2분간 조리하세요. 팬을 레인지에서 꺼내세요.
       </p>
-      <h3 style="padding-top: 20px">단계 9</h3>
-      <p style="padding-top: 8px">
+      <h3 style="padding-top: 1.25rem">단계 9</h3>
+      <p style="padding-top: 0.5rem">
         면수 ¼컵을 계란믹스에 부어 휘젓고, 아주 천천히 팬에 흘려 넣으면서 계속
         저어주세요. 치즈가 녹고 계란이 윤기가는 소스를 형성할 때까지 계속
         저어주세요. 필요하면 소금을 넣어 간을 조절하세요. 소스를 흐르는 크림과
         비슷한 농도로 만들기 위해 남은 면수 ½컵을 젓어 넣어주세요 (아마도 모두
         사용하지는 않을 것입니다).
       </p>
-      <h3 style="padding-top: 20px">단계 10</h3>
-      <p style="padding-top: 8px; padding-bottom: 48px">
+      <h3 style="padding-top: 1.25rem">단계 10</h3>
+      <p style="padding-top: 0.5rem; padding-bottom: 3rem">
         관찰레를 섞어서 파스타를 그릇에 나누어주세요. 후추와 따로 떼어둔
         치즈가루로 꾸며주세요.
       </p>
-      <div class="box">
+      <div class="callout">
         편집자의 참고 사항: 이 레시피는 원래 2018년 1월호에 게재되었습니다. 더
         많은 최고의 파스타 레시피를 확인하려면 여기를 참조하세요.
       </div>
