--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="./src/w7/index.html">7주차</a>
       </li>
       <li>
-        <a href="./src/w7/assignment/index.html">7주차</a>
+        <a href="./src/w7/assignment/index.html">7주차_과제</a>
       </li>
     </ol>
   </body>
