--- a/src/w7/assignment/index.html
+++ b/src/w7/assignment/index.html
@@ -110,10 +110,7 @@
         <div class="container__inner">
           <div class="container-left">
             <div class="container__icon">
-              <img
-                class="category-list-svg-icon"
-                src="//theme.zdassets.com/theme_assets/2197739/aed6500f4da41c641f3de5d96247eb6654e9c386.png"
-              />
+              <img src="../../w7/img/1.png" alt="" />
             </div>
             <div class="container__block">
               <div class="container__title">Using Abstract</div>
@@ -126,10 +123,7 @@
           </div>
           <div class="container-right">
             <div class="container__icon">
-              <img
-                class="category-list-svg-icon"
-                src="//theme.zdassets.com/theme_assets/2197739/91588b3d042df901d9b941ccbb57af4f151401c7.png"
-              />
+              <img src="../../w7/img/2.png" alt="" />
             </div>
             <div class="container__block">
               <div class="container__title">Manage your account</div>
@@ -144,10 +138,7 @@
         <div class="container__inner">
           <div class="container-left">
             <div class="container__icon">
-              <img
-                class="category-list-svg-icon"
-                src="//theme.zdassets.com/theme_assets/2197739/50d0db451c0e1e66e1caddd142986fcf6792ca05.png"
-              />
+              <img src="../../w7/img/3.png" alt="" />
             </div>
             <div class="container__block">
               <div class="container__title">
@@ -163,8 +154,8 @@
           <div class="container-right">
             <div class="container__icon">
               <img
-                class="category-list-svg-icon"
-                src="//theme.zdassets.com/theme_assets/2197739/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png"
+                src="../../w7/img/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png"
+                alt=""
               />
             </div>
             <div class="container__block">
@@ -179,10 +170,7 @@
         <div class="container__inner">
           <div class="container-left">
             <div class="container__icon">
-              <img
-                class="category-list-svg-icon"
-                src="//theme.zdassets.com/theme_assets/2197739/7712592465ef5c7bf18f1c7cb16e19ab44eb81e3.png"
-              />
+              <img src="../../w7/img/5.png" alt="" />
             </div>
             <div class="container__block">
               <div class="container__title">Authenticate to Abstract</div>
@@ -194,10 +182,7 @@
           </div>
           <div class="container-right">
             <div class="container__icon">
-              <img
-                class="category-list-svg-icon"
-                src="//theme.zdassets.com/theme_assets/2197739/dcc25d18e224d12621d74e545cc8bdd1b5685ca8.png"
-              />
+              <img src="../../w7/img/6.png" alt="" />
             </div>
             <div class="container__block">
               <div class="container__title">Abstract support</div>
