--- a/src/w8/assignment_demo_index.html
+++ b/src/w8/assignment_demo_index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WMD241-5주차</title>
+    <title>w7_assignment_demo</title>
   </head>
   <body>
-    <h1>WMD241-5주차</h1>
-    <ol>
-      <li><a href="./card/card.html">Card design (class & id)</a></li>
-    </ol>
+    <div class="section navigation"></div>
+    <div class="section"></div>
+    <div class="section"></div>
+    <div class="section"></div>
   </body>
 </html>
