--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <li>
         <a href="./src/w7/assignment/index.html">7주차_과제</a>
       </li>
+      <li>
+        <a href="./src/w8/assignment_demo_index.html">8주차_과제풀이 </a>
+      </li>
     </ol>
   </body>
 </html>
