--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WMD241-나지우-202320251</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>WMD241-나지우-202320251</h1>
@@ -29,6 +30,15 @@
       </li>
       <li>
         <a href="./src/w8/assignment_demo_index.html">8주차_과제풀이 </a>
+      </li>
+      <li>
+        <a href="./src/w9/index.html">9주차 </a>
+      </li>
+      <li>
+        <a href="./src/w10/index.html">10주차 </a>
+      </li>
+      <li>
+        <a href="./src/w10/assignemt/index.html">10주차 과제</a>
       </li>
     </ol>
   </body>
