--- a/src/w7/assignment/index.html
+++ b/src/w7/assignment/index.html
@@ -110,7 +110,7 @@
         <div class="container__inner">
           <div class="container-left">
             <div class="container__icon">
-              <img src="../../w7/img/1.png" alt="" />
+              <img src="../../w7/assets/1.png" alt="" />
             </div>
             <div class="container__block">
               <div class="container__title">Using Abstract</div>
@@ -123,7 +123,7 @@
           </div>
           <div class="container-right">
             <div class="container__icon">
-              <img src="../../w7/img/2.png" alt="" />
+              <img src="../../w7/assets/2.png" alt="" />
             </div>
             <div class="container__block">
               <div class="container__title">Manage your account</div>
@@ -138,7 +138,7 @@
         <div class="container__inner">
           <div class="container-left">
             <div class="container__icon">
-              <img src="../../w7/img/3.png" alt="" />
+              <img src="../../w7/assets/3.png" alt="" />
             </div>
             <div class="container__block">
               <div class="container__title">
@@ -154,7 +154,7 @@
           <div class="container-right">
             <div class="container__icon">
               <img
-                src="../../w7/img/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png"
+                src="../../w7/assets/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png"
                 alt=""
               />
             </div>
@@ -170,7 +170,7 @@
         <div class="container__inner">
           <div class="container-left">
             <div class="container__icon">
-              <img src="../../w7/img/5.png" alt="" />
+              <img src="../../w7/assets/5.png" alt="" />
             </div>
             <div class="container__block">
               <div class="container__title">Authenticate to Abstract</div>
@@ -182,7 +182,7 @@
           </div>
           <div class="container-right">
             <div class="container__icon">
-              <img src="../../w7/img/6.png" alt="" />
+              <img src="../../w7/assets/6.png" alt="" />
             </div>
             <div class="container__block">
               <div class="container__title">Abstract support</div>
