--- a/src/w10/assignemt/index.html
+++ b/src/w10/assignemt/index.html
@@ -293,7 +293,7 @@
           </div>
         </div>
         <div class="container__footer__yellow">
-          MADE REMOTELY WITH LOVE BY STARK LAB, INC. COPYRIGHT 2023
+          MADE REMOTELY WITH LOVE BY STARK LAB, INC. COPYRIGHT 2023.
         </div>
       </div>
     </div>
